--- a/Admin Dashboard Panel HTML-CSS-JavaScript/index.html
+++ b/Admin Dashboard Panel HTML-CSS-JavaScript/index.html
@@ -71,5 +71,18 @@
             </ul>
         </div>
     </nav>
+
+    <section class="dashboard">
+        <div class="top">
+            <i class="uil uil-bars"></i>
+
+            <div class="search-box">
+                <i class="uil uil-search"></i>
+                <input type="text" placeholder="Seach here...">
+            </div>
+        </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
