--- a/Admin Dashboard Panel HTML-CSS-JavaScript/index.html
+++ b/Admin Dashboard Panel HTML-CSS-JavaScript/index.html
@@ -35,7 +35,7 @@
                     <span class="link-name">Content</span>
                 </a></li>
                 <li><a href="#">
-                    <i class="uil uil-estate"></i>
+                    <i class="uil uil-chart"></i>
                     <span class="link-name">Analytics</span>
                 </a></li>
                 <li><a href="#">
@@ -74,11 +74,70 @@
 
     <section class="dashboard">
         <div class="top">
-            <i class="uil uil-bars"></i>
+            <i class="uil uil-bars sidebar-toggle"></i>
 
             <div class="search-box">
                 <i class="uil uil-search"></i>
                 <input type="text" placeholder="Seach here...">
+            </div>
+
+            <img src="images/profile.jpg" alt="">
+        </div>
+
+        <div class="dash-content">
+            <div class="overview">
+                <div class="title">
+                   <i class="uil uil-tachometer-fast-alt"></i>
+                   <span class="text">Dashboard</span> 
+                </div>
+
+                <div class="boxes">
+                    <div class="box box1">
+                        <i class="uil uil-thumbs-up"></i>
+                        <span class="text">Total Likes</span>
+                        <span class="number">50,120</span>
+                    </div>
+                    <div class="box box2">
+                        <i class="uil uil-comments"></i>
+                        <span class="text">Comments</span>
+                        <span class="number">20,120</span>
+                    </div>
+                    <div class="box box3">
+                        <i class="uil uil-share"></i>
+                        <span class="text">Total Share</span>
+                        <span class="number">10,120</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="activity">
+                <div class="title">
+                    <i class="uil uil-clock-three"></i>
+                    <span class="text">Recent Activity</span> 
+                </div>
+
+                <div class="activity-data">
+                    <div class="data names">
+                        <span class="data-title">Name</span>
+                        <span class="data-list">Idrees Anwer</span>
+                    </div>
+                    <div class="data email">
+                        <span class="data-title">Email</span>
+                        <span class="data-list">idreesanwer@gmail.com</span>
+                    </div>
+                    <div class="data joined">
+                        <span class="data-title">Joined</span>
+                        <span class="data-list">2022-06-16</span>
+                    </div>
+                    <div class="data type">
+                        <span class="data-title">Type</span>
+                        <span class="data-list">New</span>
+                    </div>
+                    <div class="data status">
+                        <span class="data-title">Status</span>
+                        <span class="data-list">Liked</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
