--- a/Admin Dashboard Panel HTML-CSS-JavaScript/index.html
+++ b/Admin Dashboard Panel HTML-CSS-JavaScript/index.html
@@ -120,21 +120,36 @@
                     <div class="data names">
                         <span class="data-title">Name</span>
                         <span class="data-list">Idrees Anwer</span>
+                        <span class="data-list">Shahid Masood</span>
+                        <span class="data-list">Aden Ferara</span>
+                        <span class="data-list">Muskan Ibrahim</span>
                     </div>
                     <div class="data email">
                         <span class="data-title">Email</span>
                         <span class="data-list">idreesanwer@gmail.com</span>
+                        <span class="data-list">shahidmasood@gmail.com</span>
+                        <span class="data-list">adenferfer@gmail.com</span>
+                        <span class="data-list">muskan889@gmail.com</span>
                     </div>
                     <div class="data joined">
                         <span class="data-title">Joined</span>
                         <span class="data-list">2022-06-16</span>
+                        <span class="data-list">2021-04-28</span>
+                        <span class="data-list">2023-01-03</span>
+                        <span class="data-list">2019-03-12</span>
                     </div>
                     <div class="data type">
                         <span class="data-title">Type</span>
                         <span class="data-list">New</span>
+                        <span class="data-list">Old</span>
+                        <span class="data-list">New</span>
+                        <span class="data-list">Old</span>
                     </div>
                     <div class="data status">
                         <span class="data-title">Status</span>
+                        <span class="data-list">Liked</span>
+                        <span class="data-list">Liked</span>
+                        <span class="data-list">Unliked</span>
                         <span class="data-list">Liked</span>
                     </div>
                 </div>
